fixed row wrapping issue with cards

--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ code {
 
 .CardListSection {
   display: flex;
-  flex-flow: column no-wrap;
+  flex-flow: column nowrap;
 }
 .CardListSection h1 {
   text-align: left;
